# Single-Det_Simulations

./: .gitignore  CMakeLists.txt  Makefile  PRISM  PRISM.cc  README.md  compile.sh
CCI2_Sim/include/: DetectorConstruction.hh  Materials.hh
CCI2_Sim/src/: DetectorConstruction.cc  Materials.cc
HEALpix/n=16/: HEALPix_PhiTheta_Ring.txt
HEMI/Analysis/: reconstruction.py
HEMI/Analysis/old/: MLEM_reconstruction.root  reconstruction_old.py
HEMI/Geant4Sim/source/: CMakeLists.txt  CodedAperture.cc
HEMI/Geant4Sim/source/include/: DetectorConstruction.hh  EventAction.hh  PhysicsList.hh  PrimaryGeneratorAction.hh  PrimaryGeneratorActionMessenger.hh  SteppingAction.hh
HEMI/Geant4Sim/source/macros/: response_loop_phi.mac  vis.mac
HEMI/Geant4Sim/source/src/: DetectorConstruction.cc  PrimaryGeneratorActionMessenger.cc  RunAction.cc  SteppingAction.cc  TrackingAction.cc
HEMI_Sim/: CMakeCache.txt  CMakeLists.txt  CodedAperture  CodedAperture.cc  HEMI  HEMI.cc  Makefile  cmake_install.cmake  compile.sh  totalresponse.root
HEMI_Sim/analysis/: readsystemresponse.py  reconstruction.py
HEMI_Sim/analysis/old/: MLEM_reconstruction.root
HEMI_Sim/docs/: README
HEMI_Sim/include/: ActionInitialization.hh  RunAction.hh  StackingAction.hh  SteppingAction.hh  TrackingAction.hh
HEMI_Sim/macros/: run.mac  vis.mac
HEMI_Sim/macros/response/: response_loop_main.mac  response_loop_phi.mac  response_loop_theta.mac
HEMI_Sim/output/: totalresponse.root
HEMI_Sim/src/: ActionInitialization.cc  DetectorConstruction.cc  EventAction.cc  PhysicsList.cc  PrimaryGeneratorAction.cc  PrimaryGeneratorActionMessenger.cc  RunAction.cc  StackingAction.cc  SteppingAction.cc
HEMI_Sim/xcode/: CMakeCache.txt  cmake_install.cmake  compile.sh
HEMI_Sim/xcode/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeRelWithDebInfo  ReRunCMake.make  ZERO_CHECK_cmakeRulesBuildPhase.makeRelease
HEMI_Sim/xcode/CodedAperture.xcodeproj/: project.pbxproj
MT_Optimized_PRISM/: CMakeCache.txt  G4History.macro  Makefile  PRISM_response.cc  cmake_install.cmake
MT_Optimized_PRISM/HEALpix/HealpixLib-Matlab/: HealpixTest.m
MT_Optimized_PRISM/HEALpix/n=32/: HEALPix_PhiTheta_Nested.txt  HEALPix_PhiTheta_Ring.txt
MT_Optimized_PRISM/HEALpix/n=8/: HEALPix_PhiTheta_Ring.txt
MT_Optimized_PRISM/geo/ring/: centervertices_Ring.txt
MT_Optimized_PRISM/mac/: gui.mac  run.mac
MT_Optimized_PRISM/mac/response_macros/: run2.mac
MT_Optimized_PRISM/pythonTools/: plotter.py
MT_Optimized_PRISM/src/: DetectorConstructionMessenger.cc  PrimaryGeneratorAction.cc  SteppingAction.cc
MT_Optimized_PRISM/xcode/: CMakeCache.txt  cmake_install.cmake  compile.sh
MT_Optimized_PRISM/xcode/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeMinSizeRel  ALL_BUILD_cmakeRulesBuildPhase.makeRelease  ReRunCMake.make  ZERO_CHECK_cmakeRulesBuildPhase.makeRelease
MT_Optimized_PRISM/xcode/PRISM_response.xcodeproj/: project.pbxproj
PRISM/Geant4Sim/source/: CMakeLists.txt  CodedAperture.cc
PRISM_Sim/: CMakeCache.txt  CMakeLists.txt  CodedAperture  CodedAperture.cc  Makefile  cmake_install.cmake  totalresponse.root
PRISM_Sim/HEALpix/HealpixLib-Matlab/: HealpixTest.m  for_print.m
PRISM_Sim/HEALpix/Healpy/: healpy_toy.py
PRISM_Sim/HEALpix/n=16/: HEALPix_PhiTheta_Nested.txt  HEALPix_PhiTheta_Ring.txt
PRISM_Sim/HEALpix/n=4/: HEALPix_PhiTheta_Nested.txt  HEALPix_PhiTheta_Ring.txt
PRISM_Sim/PRISM_Sim/: Makefile  PRISM  compile.sh
PRISM_Sim/PRISM_Sim/geo/: centervertices_Nested.txt  rotationmatrices_Ring.txt
PRISM_Sim/PRISM_Sim/include/: PrimaryGeneratorActionMessenger.hh  StackingAction.hh
PRISM_Sim/PRISM_Sim/output/: output.txt
PRISM_Sim/PRISM_Sim/src/: ActionInitialization.cc  DetectorConstruction.cc  DetectorConstructionMessenger.cc  Hit.cc  RunAction.cc  (+2 more)
PRISM_Sim/PRISM_Sim_MT/: CMakeLists.txt  Makefile  PRISM_MT  PRISM_MT.cc  PRISM_response  compile.sh
PRISM_Sim/analysis/: HP8_FullMask_20k_Response.p  Scraps.ipynb  SphericalHeatMap.py  SphericalHistogram.py  blah.py  readbinary.py  readbinarydatafile.py  reconstruction.ipynb  reconstruction.py
PRISM_Sim/docs/: README  doc.aux  doc.out  doc.tex
PRISM_Sim/geo/: rotationmatrices_Nested.txt
PRISM_Sim/include/: ActionInitialization.hh  DetectorConstruction.hh  DetectorConstructionMessenger.hh  EventAction.hh  Hit.hh  PhysicsList.hh  PrimaryGeneratorAction.hh  PrimaryGeneratorActionMessenger.hh  RunAction.hh  SensitiveDetector.hh  StackingAction.hh  StackingActionMessenger.hh  SteppingAction.hh  TrackingAction.hh
PRISM_Sim/macros/: run.mac  vis.mac
PRISM_Sim/output/: output.root  output.txt  output1.txt  totalresponse.root
PRISM_Sim/src/: ActionInitialization.cc  DetectorConstruction.cc  DetectorConstructionMessenger.cc  EventAction.cc  Hit.cc  PhysicsList.cc  PrimaryGeneratorAction.cc  PrimaryGeneratorActionMessenger.cc  RunAction.cc  SensitiveDetector.cc  StackingAction.cc  StackingActionMessenger.cc  SteppingAction.cc  TrackingAction.cc
PRISM_Sim/xcode/: CMakeCache.txt  cmake_install.cmake  compile.sh
docs/: readme
docs/doxygen/: Doxyfile
geo/: centervertices_1Det.txt  rotationmatrices_1Det.txt
include/: ActionInitialization.hh  DetectorConstruction.hh  DetectorConstructionMessenger.hh  EventAction.hh  Hit.hh  PhysicsList.hh  PrimaryGeneratorAction.hh  PrimaryGeneratorActionMessenger.hh  RunAction.hh  SensitiveDetector.hh  StackingActionMessenger.hh  SteppingAction.hh
macros/: run.mac  vis.mac
macros/response/: beamsMain.mac  beamsSendOff.mac  main.mac  pointBeams.mac  runAng.mac  runAngphi0180.mac  sendOffAng.mac  sendOffAngAm241.mac  sendOffAngBa133.mac  sendOffAngCo57.mac  sendOffAngCs137.mac  sendOffAngphi0180.mac
output/: output.txt  output_60keV_rand_HP912.txt  output_662keV_1Det_cone_HP0000.txt  output_662keV_1Det_cone_HP45.txt
responses/PRISM/: opengl_optimize
src/: DetectorConstruction.cc  DetectorConstructionMessenger.cc  EventAction.cc  Hit.cc  PhysicsList.cc  PrimaryGeneratorAction.cc  PrimaryGeneratorActionMessenger.cc  RunAction.cc  SensitiveDetector.cc  StackingAction.cc  SteppingAction.cc
tools/: CodedApertureReconstruction.py
(+204 files in other folders)
